--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,9 @@ language: en
 
 pipeline:
 - name: ConveRTTokenizer
+  model_url: https://github.com/connorbrinton/polyai-models/releases/download/v1.0/model.tar.gz
 - name: ConveRTFeaturizer
+  model_url: https://github.com/connorbrinton/polyai-models/releases/download/v1.0/model.tar.gz
 - name: CountVectorsFeaturizer
 - name: CountVectorsFeaturizer
   analyzer: char_wb
